<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/color_Black"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="120dp"
            android:layout_height="33dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:background="@drawable/headerlogowhite" />

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/head_image"
            android:layout_marginTop="40dp"
            android:orientation="vertical"
            android:padding="15dp">

            <com.works.admin.hours_timetracking.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Welcome"
                android:textColor="@color/color_Blue"
                android:textSize="25dp"
                app:font_type="RobotoRegular" />

            <com.works.admin.hours_timetracking.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/Signintobegin"
                android:textColor="@color/color_gray"
                android:textSize="22dp"
                app:font_type="RobotoRegular" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/u" />

                <com.works.admin.hours_timetracking.FontEdittext
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColorHint="@color/color_gray"
                    android:textSize="15dp"
                    app:font_type="RobotoRegular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/locked" />

                <com.works.admin.hours_timetracking.FontEdittext
                    android:id="@+id/ed_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textColor="@color/color_White"
                    android:textColorHint="@color/color_gray"
                    android:textSize="15dp"
                    app:font_type="RobotoRegular" />
            </LinearLayout>

            <com.works.admin.hours_timetracking.FontTextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/green_btn"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/Login"
                android:textColor="@color/color_White"
                android:textColorHint="@color/color_gray"
                app:font_type="RobotoRegular" />

            <com.works.admin.hours_timetracking.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:id="@+id/forget"
                android:text="@string/Forgotpassword"
                android:textColor="@color/color_gray"
                android:textSize="15dp"
                app:font_type="RobotoRegular" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@+id/main"
            android:layout_gravity="center"
            android:layout_marginBottom="18dp"
            android:gravity="center|bottom"
            android:orientation="vertical">

            <com.works.admin.hours_timetracking.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/go"
                android:gravity="center"
                android:text="www.hours.fi"
                android:textColor="@color/color_gray"
                android:textSize="17dp"
                app:font_type="RobotoRegular" />

            <com.works.admin.hours_timetracking.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                android:gravity="center"
                android:text="@string/Version"
                android:textColor="@color/color_gray"
                android:textSize="15dp"
                app:font_type="RobotoRegular" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
