<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/alerthj"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="25dp"
        android:background="@drawable/white_popup"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:visibility="gone">

            <com.works.admin.hours_timetracking.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"

                android:textColor="@color/color_White"
                android:textSize="16sp"
                app:font_type="arial" />

            <ImageView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="16dp" />


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.works.admin.hours_timetracking.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/Loginfailed"
                android:textColor="@color/color_Black"
                android:textSize="20dp"
                app:font_type="arial" />

            <com.works.admin.hours_timetracking.FontTextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:gravity="center"
                android:text="@string/check"
                android:textColor="@color/color_Black"
                android:textSize="16dp"
                app:font_type="arial" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <com.works.admin.hours_timetracking.FontTextView
                    android:id="@+id/trya"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingLeft="25dp"
                    android:paddingRight="25dp"
                    android:paddingTop="8dp"
                    android:text="@string/Tryagain"
                    android:textColor="@color/color_Blue"
                    android:textSize="15dp"
                    app:font_type="arial" />


                <com.works.admin.hours_timetracking.FontTextView
                    android:id="@+id/yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|right"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingLeft="25dp"

                    android:paddingRight="25dp"
                    android:paddingTop="8dp"
                    android:text="Yes"
                    android:textColor="@color/color_Blue"
                    android:textSize="15dp"
                    android:visibility="gone"
                    app:font_type="arial" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
